syntax = "proto3";
package LimeChain.mantrachain.mdb.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/LimeChain/mantrachain/x/mdb/types";
option (gogoproto.equal_all) = true;

message NftCollection {
  bytes index = 1 [(gogoproto.moretags) = "yaml:\"index\""];
  string did = 2 [(gogoproto.moretags) = "yaml:\"did\""];
  repeated NftCollectionImage images = 3 [(gogoproto.moretags) = "yaml:\"images\""];
  string url = 4 [(gogoproto.moretags) = "yaml:\"url\""];
  repeated NftCollectionLink links = 5 [(gogoproto.moretags) = "yaml:\"links\""];
  repeated NftCollectionOption options = 6 [(gogoproto.moretags) = "yaml:\"options\""];
  string category = 7 [(gogoproto.moretags) = "yaml:\"category\""];
  bool opened = 8 [(gogoproto.moretags) = "yaml:\"opened\""];
  bytes owner = 9 [
    (gogoproto.moretags) = "yaml:\"owner\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  bytes creator = 10 [
    (gogoproto.moretags) = "yaml:\"creator\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
}

message NftCollectionOption {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters)  = false;

  string type = 1;
  string value = 2;
  string sub_value = 3;
}

message NftCollectionImage {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters)  = false;

  string type = 1;
  string url = 2;
}

message NftCollectionLink {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters)  = false;

  string type = 1;
  string url = 2;
}
